...
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp">

    </LinearLayout>

    <ListView
        android:id="@+id/product_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="#FFFFFF"
        android:divider="@android:color/darker_gray"
...
